#4653 : Fixed a regression caused by [4454] where the panels where not any more being visible at first click.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@4481 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/editor.css
+++ b/_source/skins/kama/editor.css
@@ -14,8 +14,12 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 @import url("presets.css");
 
 /* Restore the container visibility */
-html .cke_skin_kama,
-html.cke_skin_kama_container
+html .cke_skin_kama
 {
 	visibility: inherit;
+}
+
+html.cke_skin_kama_container
+{
+	visibility: visible;
 }
