--- a/_source/skins/office2003/editor.css
+++ b/_source/skins/office2003/editor.css
@@ -14,8 +14,12 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 @import url("presets.css");
 
 /* Restore the container visibility */
-html .cke_skin_office2003,
-html.cke_skin_office2003_container
+html .cke_skin_office2003
 {
 	visibility: inherit;
+}
+
+html.cke_skin_office2003_container
+{
+	visibility: visible;
 }
