--- a/_source/skins/v2/editor.css
+++ b/_source/skins/v2/editor.css
@@ -14,8 +14,12 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 @import url("presets.css");
 
 /* Restore the container visibility */
-html .cke_skin_v2,
-html.cke_skin_v2_container
+html .cke_skin_v2
 {
 	visibility: inherit;
+}
+
+html.cke_skin_v2_container
+{
+	visibility: visible;
 }
